Fix: TTF-1082 - regression link spacing
https://digitaltools.phe.org.uk/browse/TTF-1082

--- a/app/shared/components/Typography/style.scss
+++ b/app/shared/components/Typography/style.scss
@@ -206,6 +206,10 @@ mark,
 
   &:not(:last-child) {
     margin-right: .3em;
+
+    .list-inline--spaced & {
+      margin-right: .8em;
+    }
   }
 }
 
